[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Gimmicks/FBZPylonCenter.png" type="Texture" id=1]
[ext_resource path="res://Entities/Gimmicks/VerticalPylon.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Gimmicks/FBZPylon.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "main"
length = 0.4
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("FBZ_Pylon_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FBZ_Pylon_Bottom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FBZ_Pylon_Top:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.133333, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="FBZ_Pylon_Controller" type="Node2D"]
script = ExtResource( 2 )

[node name="FBZ_Pylon_Sprite" type="Sprite" parent="."]
position = Vector2( 0, -65 )
texture = ExtResource( 1 )
hframes = 3
region_enabled = true
region_rect = Rect2( 0, 0, 48, 96 )

[node name="FBZ_Pylon_Bottom" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
hframes = 3
vframes = 2
frame = 3

[node name="FBZ_Pylon_Top" type="Sprite" parent="."]
position = Vector2( 0, -121 )
texture = ExtResource( 3 )
hframes = 3
vframes = 2

[node name="FBZ_Pylon_Animator" type="AnimationPlayer" parent="."]
anims/main = SubResource( 1 )
